bug squash

--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -556,26 +556,44 @@ button {
 
 .stat-bar {
     margin-bottom: 10px;
+    padding-left: 0.8rem;
+    
+    padding: 0.27rem;
 }
 
-.stat-label {
+.stat-label1,
+.stat-label2,
+.stat-label3,
+.stat-label4,
+.stat-label5,
+.stat-label6 {
     position: absolute;
+    left: 25rem;
     font-weight: 500;
-    margin-bottom: 5px;
-    color: rgb(245, 245, 245);
+    margin-top: -1.15rem;
+    color: rgb(2, 2, 2);
     justify-content: center;
     align-items: center;
+    z-index: 2;
 }
 
 .stat-bar-container {
     background-color: #ddd;
+    position: absolute;
+    left: 6rem;
+    margin-top: -1.19rem;
+    
+    display: flex;
     height: 20px;
+    width: 85%;
     border-radius: 30px;
     overflow: hidden;
     background-image: linear-gradient(to right, rgba(255, 255, 255, 0.986), rgba(128, 128, 128, 0.8) 90%);
     border-radius: 30px;
+    
 
 }
+
 
 .stat-bar-inner1 {
     height: 100%;
